syntax = "proto3";
package tg;

enum ELanguage {
    LN_UNDEFINED = 0;
    LN_RU = 1;
    LN_EN = 2;

    LN_OTHER = 3;
}

enum ECategory {
    NC_UNDEFINED = 0;
    NC_ANY = 1;
    NC_SOCIETY = 2;
    NC_ECONOMY = 3;
    NC_TECHNOLOGY = 4;
    NC_SPORTS = 5;
    NC_ENTERTAINMENT = 6;
    NC_SCIENCE = 7;
    NC_OTHER = 8;
    NC_NOT_NEWS = 9;
}
